ProduktAnsicht Beispiel Seite mit button Funktionen

--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -34,45 +34,79 @@
 
 
 
-        <td >
-            <div class="slider">
-                <div class="carousel slide article-slide" id="article-photo-carousel">
+        <!--
+    Responsive Email Template by meartlab
+    A component of source: codepen.io - zoom effect:elevateZoom
+    Licensed under MIT
+    --><td>
+        <div class="container">
+            <div class="row">
+                <div class=" col-sm-4 col-xs-4">
+                    <h4> MEartLAB - Ali MAMMADOV - </h4>
+                    <h6><a hreh="https://www.behance.net/meartlab"> Follow for Updates</a></h6>
+                    <div class="container">
+                        <div id='carousel-custom' class='carousel slide' data-ride='carousel'>
+                            <div class='carousel-outer'>
+                                <!-- me art lab slider -->
+                                <div class='carousel-inner '>
+                                    <div class='item active'>
+                                        <img src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/print/image1xxl.jpg' alt=''id="zoom_05"  data-zoom-image="http://images.asos-media.com/inv/media/8/2/3/3/5313328/print/image1xxl.jpg"/>
+                                    </div>
+                                    <div class='item'  id="zoom_05">
+                                        <img src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/image2xxl.jpg' alt='' data-zoom-image="http://images.asos-media.com/inv/media/8/2/3/3/5313328/image2xxl.jpg" />
+                                    </div>
+                                    <div class='item'>
+                                        <img src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/image3xxl.jpg' alt='' data-zoom-image="http://images.asos-media.com/inv/media/8/2/3/3/5313328/image3xxl.jpg" />
+                                    </div>
 
-                    <!-- Wrapper for slides -->
-                    <div class="carousel-inner cont-slider">
+                                    <div class='item'>
+                                        <img src='http://images.asos-media.com/inv/media/3/6/7/0/4850763/multi/image1xxl.jpg' alt='' data-zoom-image="http://images.asos-media.com/inv/media/3/6/7/0/4850763/multi/image1xxl.jpg" id="zoom_05"/>
+                                    </div>
+                                    <div class='item'>
+                                        <img src='http://images.asos-media.com/inv/media/5/2/1/3/4603125/gold/image1xxl.jpg' alt='' data-zoom-image="http://images.asos-media.com/inv/media/5/2/1/3/4603125/gold/image1xxl.jpg" id="zoom_05"/>
+                                    </div>
+                                    <div class='item'>
+                                        <img src='http://images.asos-media.com/inv/media/5/3/6/8/4948635/mink/image1xxl.jpg' alt='' data-zoom-image="http://images.asos-media.com/inv/media/5/3/6/8/4948635/mink/image1xxl.jpg" id="zoom_05"/>
+                                    </div>
+                                    <div class='item'>
+                                        <img src='http://images.asos-media.com/inv/media/1/3/0/8/5268031/image2xxl.jpgg' alt='' data-zoom-image="http://images.asos-media.com/inv/media/1/3/0/8/5268031/image2xxl.jpg" id="zoom_05"/>
+                                    </div>
+                                    <script>
+                                        $("#zoom_05").elevateZoom({ zoomType    : "inner", cursor: "crosshair" });
+                                    </script>
+                                </div>
 
-                        <div class="item active">
-                            <img class="zoom" alt="" title="" src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/left2.jpg?BCB">
+                                <!-- sag sol -->
+                                <a class='left carousel-control' href='#carousel-custom' data-slide='prev'>
+                                    <span class='glyphicon glyphicon-chevron-left'></span>
+                                </a>
+                                <a class='right carousel-control' href='#carousel-custom' data-slide='next'>
+                                    <span class='glyphicon glyphicon-chevron-right'></span>
+                                </a>
+                            </div>
+
+                            <!-- thumb -->
+                            <ol class='carousel-indicators mCustomScrollbar meartlab'>
+                                <li data-target='#carousel-custom' data-slide-to='0' class='active'><img src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/print/image1xxl.jpg' alt='' /></li>
+                                <li data-target='#carousel-custom' data-slide-to='1'><img src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/image2xxl.jpg' alt='' /></li>
+                                <li data-target='#carousel-custom' data-slide-to='2'><img src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/image3xxl.jpg' alt='' /></li>
+                                <li data-target='#carousel-custom' data-slide-to='3'><img src='http://images.asos-media.com/inv/media/3/6/7/0/4850763/multi/image1xxl.jpg' alt='' /></li>
+                                <li data-target='#carousel-custom' data-slide-to='4'><img src='http://images.asos-media.com/inv/media/5/2/1/3/4603125/gold/image1xxl.jpg' alt='' /></li>
+                                <li data-target='#carousel-custom' data-slide-to='5'><img src='http://images.asos-media.com/inv/media/5/3/6/8/4948635/mink/image1xxl.jpg' alt='' /></li>
+                                <li data-target='#carousel-custom' data-slide-to='6'><img src='http://images.asos-media.com/inv/media/1/3/0/8/5268031/image2xxl.jpg' alt='' /></li>
+
+                            </ol>
                         </div>
-                        <div class="item">
-                            <img alt="" title="" src="http://placehold.it/500x350">
-                        </div>
-                        <div class="item">
-                            <img alt="" title="" src="http://placehold.it/500x350">
-                        </div>
-                        <div class="item">
-                            <img alt="" title="" src="http://placehold.it/500x350">
-                        </div>
+
+                        <script type="text/javascript">
+
+                            $(document).ready(function() {
+                                $(".mCustomScrollbar").mCustomScrollbar({axis:"x"});
+                            });
+                        </script>
                     </div>
-                    <!-- Indicators -->
-                    <ol class="carousel-indicators">
-                        <li class="active" data-slide-to="0" data-target="#article-photo-carousel">
-                            <img alt="" src="http://placehold.it/250x225">
-                        </li>
-                        <li class="" data-slide-to="1" data-target="#article-photo-carousel">
-                            <img alt="" src="http://placehold.it/250x225">
-                        </li>
-                        <li class="" data-slide-to="2" data-target="#article-photo-carousel">
-                            <img alt="" src="http://placehold.it/250x225">
-                        </li>
-                        <li class="" data-slide-to="3" data-target="#article-photo-carousel">
-                            <img alt="" src="http://placehold.it/250x225">
-                        </li>
-                    </ol>
                 </div>
 
-            </div>
-        </td>
 
 
 
@@ -90,10 +124,7 @@
 
 
 
-
-
-
-        <td>
+                <td>
             <div id = "button2" >
                 <h2> Preis </h2>
             </div>
