--- a/app/less/produktAnsicht.less
+++ b/app/less/produktAnsicht.less
@@ -1,106 +1,55 @@
-.carousel-inner {
-  position: relative;
-  width: 100%;
-  min-height: 300px;
+
+
+
+#button1
+{
+  margin-left: 0px;
+}
+#Groesse
+{
+  margin-left: 5px ;
+  margin-bottom: -2px;
+}
+#button11
+{
+  color: black;
+  background-color: #e7e7e7;
+  padding-right: 33px;
+}
+#button2
+{
+  margin-left:79px;
 }
 
-.carousel-control.right {
-  right: 0;
-  left: auto;
-  background-image: none !important;
-  background-repeat: repeat-x;
+#button3
+{
+  margin-left:79px;
 }
-.carousel-control.left {
-  left: 0;
-  right: auto;
-  background-image: none !important;
-  background-repeat: repeat-x;
+#button21
+{
+  color: white;
+  background-color:#e7e7e7 ;
+  padding-right: 39px;
 }
-#carousel-example-generic {
-  margin: 20px auto;
-  width: 100%;
+#button31
+{ color: black;
+  background-color: #e7e7e7;
+  padding-right: 39px;
 }
-
-#carousel-custom {
-  margin: 20px auto;
-  width: 400px;
-}
-#carousel-custom .carousel-indicators {
-  margin: 10px 0 0;
-  overflow: auto;
-  position: static;
-  text-align: left;
-  white-space: nowrap;
-  width: 100%;
-  overflow:hidden;
-}
-#carousel-custom .carousel-indicators li {
-  background-color: transparent;
-  -webkit-border-radius: 0;
-  border-radius: 0;
-  display: inline-block;
-  height: auto;
-  margin: 0 !important;
-  width: auto;
-}
-#carousel-custom .carousel-indicators li img {
-  display: block;
-  opacity: 0.5;
-}
-#carousel-custom .carousel-indicators li.active img {
-  opacity: 1;
-}
-#carousel-custom .carousel-indicators li:hover img {
-  opacity: 0.75;
-}
-#carousel-custom .carousel-outer {
-  position: relative;
-}
-.carousel-indicators li img {
-  height: 66px;
-  width: 52px;}
-
-ul.gallery{
-  margin-top: 80px;
-  margin-left: 3vw;
-  margin-right:3vw;
+.grad
+{
+  margin-bottom: 30px;
+  width:20px;
+  height:20px;
+  border-radius:50px;
+  background:linear-gradient(to bottom, #FF0000 , #FF0000 )
 }
 
-.zoom {
-  -webkit-transition: all 0.6s ease-in-out;
-  -moz-transition: all 0.35s ease-in-out;
-  transition: all 0.35s ease-in-out;
-  cursor: -webkit-zoom-in;
-  cursor: -moz-zoom-in;
-  cursor: zoom-in;
-}
 
-.zoom:hover,
-.zoom:active,
-.zoom:focus {
-  /**adjust scale to desired size,
-  add browser prefixes**/
-  -ms-transform: scale(1.5);
-  -moz-transform: scale(1.5);
-  -webkit-transform: scale(1.5);
-  -o-transform: scale(1.5);
-  transform: scale(1.5);
-  position:relative;
-  z-index:100;
-}
 
-/**To keep upscaled images visible on mobile,
-increase left & right margins a bit**/
-@media only screen and (max-width: 768px) {
-  ul.gallery {
-    margin-left: 15vw;
-    margin-right: 15vw;
-  }
 
-  /**TIP: Easy escape for touch screens,
-  give gallery's parent container a cursor: pointer.**/
-  .DivName {cursor: pointer}
-}
+
+
 
 
 
