class Artistlistansicht funktion

--- a/app/less/artistListAnsicht.less
+++ b/app/less/artistListAnsicht.less
@@ -4,7 +4,41 @@
   left:1px;
   margin-top:90px;
 }
+.artistListAnsicht .artistName span {
+  color: #fff;
+}
+.aArtist{
 
+  margin-top: 90px;
+  margin-bottom:90px;
+  width: 220px;
+  height:250px;
+}
+
+.aArtist .artistName {
+  background-color: rgba(7, 7, 7, 0.65);
+  color: #8b7f48;
+  margin-top: -30px;
+  position: relative;
+  text-align: center;
+  width: 100%;
+  z-index: 1;
+  height: 50px;
+  overflow: hidden;
+}
+.thumbnail img {
+  width: 220px;
+  height: 250px;
+}
+
+.artistName span {
+  line-height: 30px;
+  position: relative;
+  top: -10px;
+}
+
+
+/*Alt Security
 .artistListAnsicht .artistName span {
   color: #fff;
 }
@@ -43,3 +77,4 @@
   position: relative;
   top: -10px;
 }
+*/
