schwarz-weiß logo

--- a/app/less/impressum.less
+++ b/app/less/impressum.less
@@ -9,7 +9,7 @@
 
 /*ABOUT US*/
 #headline {
-  color: darkred;
+  color: black;
   font-weight: bold;
 }
 
@@ -19,7 +19,7 @@
 }
 
 #imprintTitle {
-  color: darkred;
+  color: black;
   font-family: "Shree Devanagari 714";
 }
 
@@ -34,7 +34,7 @@
 /*Title of contact form*/
 #contactTitle {
   text-align: center;
-  color: darkred;
+  color: black;
 }
 
 #contactForm {
