--- a/app/less/style.less
+++ b/app/less/style.less
@@ -40,11 +40,11 @@ body {
 }
 
 #b1 {
-  color: darkgoldenrod;
+  color: black;
 }
 
 #b2 {
-  color: darkred;
+  color: black;
 }
 
 #b3 {
@@ -56,24 +56,15 @@ body {
 #b4 {
   margin-bottom: -40px;
   margin-right: -10px;
-  color: darkred;
+  color: black;
 }
 
 #b5 {
   margin-bottom: -40px;
-  color: darkgoldenrod;
+  color: black;
 }
 
-/*Logo in the middle of video*/
-/*#logo2 {
-  width: 50%;
-  height: 50%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 100px;
 
-}*/
 
 /*Backgroundvideo customizing*/
 .jumbotron {
@@ -84,17 +75,15 @@ body {
   margin-bottom: -50px;
 }
 
-.vertical-center {
-  min-height: 50%;
-  min-height: 50vh;
-  display: flex;
-  align-items: center;
-}
+/*Logo in the middle of video*/
+#logo2 {
+  width: 70%;
+  height: 70%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
 
-/*Text in the middle of jumbotron*/
-#pttp {
-  font-family: "Shree Devanagari 714";
-  color: darkred;
 }
 
 /* Keine Ahnung
@@ -109,13 +98,13 @@ body {
 /*Customizing rows*/
 .row {
   font-family: "Shree Devanagari 714";
-  color: darkred;
+  color: black;
   text-align: center;
   border-bottom-style: double;
-  border-bottom-color: darkgoldenrod;
+  border-bottom-color: black;
   border-bottom-width: 2px;
   border-top-style: double;
-  border-top-color: darkgoldenrod;
+  border-top-color: black;
   border-top-width: 2px;
 }
 
@@ -140,8 +129,8 @@ body {
 }
 
 #forum {
-  margin-top: -20px;
-  margin-bottom: -20px;
+  margin-top: -30px;
+  margin-bottom: -30px;
   background-image: url("https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/speech-bubbles-sketch-21374783.jpg");
   background-position: center;
   background-size: 45%;
@@ -165,7 +154,7 @@ body {
 
 /*Back to top*/
 #btt {
-  color: darkred;
+  color: black;
 }
 
 /* Customize container*/
@@ -195,7 +184,3 @@ body {
 #positionB {
   margin-left: 50px;
 }
-
-
-
-
