--- a/app/tpl/partials/header.hbs
+++ b/app/tpl/partials/header.hbs
@@ -29,7 +29,7 @@
 
         <div class="navbar-header"> 
             <a href="index.html"><img id="logo"
-                                      src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/Farbkonzept%204.png"></a>
+                                      src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/LogoB.png"></a>
         </div>
 
         <ul class="nav navbar-nav navbar-right"> 
