--- a/app/tpl/partials/impressumMain.hbs
+++ b/app/tpl/partials/impressumMain.hbs
@@ -46,5 +46,5 @@
         <input type="text" class="form-control" id="question">
     </div>
 
-    <div id="send" class="btn btn-primary">Send</div>
+    <div id="send" class="btn btn-primary" onsend="validateForm()">Send</div>
 </div>
