--- a/app/tpl/partials/main.hbs
+++ b/app/tpl/partials/main.hbs
@@ -1,8 +1,7 @@
 
 <div class="jumbotron vertical-center">
     <div class="container">
-        <!--<img id="bild2" , src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/Farbkonzept%204.png">-->
-        <h1 id="pttp">POWER TO THE PEOPLE</h1>
+        <img id="logo2" src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/LogoN.png">
     </div>
 </div>
 
