vergroßernListenAnsicht Grundgerüst (andere als Produktansicht vergrößerung , ist für die kleinen Bilder)

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -4,6 +4,7 @@
 @import "artistAnsicht";
 @import "artistListAnsicht";
 @import "impressum";
+@import "vergrossernListenAnsicht";
 
 /* Space out content a bit */
 body {
