--- a/app/tpl/partials/footer.hbs
+++ b/app/tpl/partials/footer.hbs
@@ -16,6 +16,7 @@
 <script src="js/webShop.js"></script> 
 <script src="js/produktAnsicht.js"></script> 
 <script src="js/artistListAnsicht.js"></script> 
+<script src="js/vergrossernListenAnsicht.js"></script> 
 <script src="js/impressum.js"></script> 
 
 <!-- endbuild -->
