--- a/app/less/produktAnsicht.less
+++ b/app/less/produktAnsicht.less
@@ -1,6 +1,4 @@
 
-
-
 #button1
 {
   margin-left: 0px;
@@ -44,16 +42,20 @@
   border-radius:50px;
   background:linear-gradient(to bottom, #FF0000 , #FF0000 )
 }
-
-
-
-
-
-
-
-
-
-
+.rangoliPic
+{
+  -webkit-transition: all .3s ease-out;
+  -moz-transition: all .3s ease-out;
+  -o-transition: all .3s ease-out;
+  transition: all .3s ease-out;
+}
+.rangoliPic:hover {
+  -moz-transform: scale(2);
+  -webkit-transform: scale(2);
+  -o-transform: scale(2);
+  -ms-transform: scale(2);
+  transform: scale(2);
+}
 
 
 .carousel-inner {
@@ -117,3 +119,5 @@
 .carousel-indicators li img {
   height: 66px;
   width: 52px;}
+
+
