--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -26,14 +26,6 @@
             </div>
         </td>
 
-
-
-
-
-
-
-
-
         <!--
     Responsive Email Template by meartlab
     A component of source: codepen.io - zoom effect:elevateZoom
@@ -50,39 +42,30 @@
                                 <!-- me art lab slider -->
                                 <div class='carousel-inner '>
                                     <div class='item active'>
-                                        <img src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/print/image1xxl.jpg' alt=''id="zoom_05"  data-zoom-image="http://images.asos-media.com/inv/media/8/2/3/3/5313328/print/image1xxl.jpg"/>
+                                        <img class="rangoliPic" src="http://images.asos-media.com/inv/media/8/2/3/3/5313328/print/image1xxl.jpg"/>
                                     </div>
                                     <div class='item'  id="zoom_05">
-                                        <img src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/image2xxl.jpg' alt='' data-zoom-image="http://images.asos-media.com/inv/media/8/2/3/3/5313328/image2xxl.jpg" />
+                                        <img class="rangoliPic" src="http://images.asos-media.com/inv/media/8/2/3/3/5313328/image2xxl.jpg" />
                                     </div>
                                     <div class='item'>
-                                        <img src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/image3xxl.jpg' alt='' data-zoom-image="http://images.asos-media.com/inv/media/8/2/3/3/5313328/image3xxl.jpg" />
+                                        <img class="rangoliPic" src="http://images.asos-media.com/inv/media/8/2/3/3/5313328/image3xxl.jpg" />
                                     </div>
 
                                     <div class='item'>
-                                        <img src='http://images.asos-media.com/inv/media/3/6/7/0/4850763/multi/image1xxl.jpg' alt='' data-zoom-image="http://images.asos-media.com/inv/media/3/6/7/0/4850763/multi/image1xxl.jpg" id="zoom_05"/>
+                                        <img class="rangoliPic" src="http://images.asos-media.com/inv/media/3/6/7/0/4850763/multi/image1xxl.jpg"/>
                                     </div>
                                     <div class='item'>
-                                        <img src='http://images.asos-media.com/inv/media/5/2/1/3/4603125/gold/image1xxl.jpg' alt='' data-zoom-image="http://images.asos-media.com/inv/media/5/2/1/3/4603125/gold/image1xxl.jpg" id="zoom_05"/>
+                                        <img class="rangoliPic" src="http://images.asos-media.com/inv/media/5/2/1/3/4603125/gold/image1xxl.jpg"/>
                                     </div>
                                     <div class='item'>
-                                        <img src='http://images.asos-media.com/inv/media/5/3/6/8/4948635/mink/image1xxl.jpg' alt='' data-zoom-image="http://images.asos-media.com/inv/media/5/3/6/8/4948635/mink/image1xxl.jpg" id="zoom_05"/>
+                                        <img class="rangoliPic" src="http://images.asos-media.com/inv/media/5/3/6/8/4948635/mink/image1xxl.jpg">
                                     </div>
                                     <div class='item'>
-                                        <img src='http://images.asos-media.com/inv/media/1/3/0/8/5268031/image2xxl.jpgg' alt='' data-zoom-image="http://images.asos-media.com/inv/media/1/3/0/8/5268031/image2xxl.jpg" id="zoom_05"/>
+                                        <img class="rangoliPic" src="http://images.asos-media.com/inv/media/1/3/0/8/5268031/image2xxl.jpg"/>
                                     </div>
-                                    <script>
-                                        $("#zoom_05").elevateZoom({ zoomType    : "inner", cursor: "crosshair" });
-                                    </script>
+
                                 </div>
 
-                                <!-- sag sol -->
-                                <a class='left carousel-control' href='#carousel-custom' data-slide='prev'>
-                                    <span class='glyphicon glyphicon-chevron-left'></span>
-                                </a>
-                                <a class='right carousel-control' href='#carousel-custom' data-slide='next'>
-                                    <span class='glyphicon glyphicon-chevron-right'></span>
-                                </a>
                             </div>
 
                             <!-- thumb -->
@@ -98,33 +81,9 @@
                             </ol>
                         </div>
 
-                        <script type="text/javascript">
-
-                            $(document).ready(function() {
-                                $(".mCustomScrollbar").mCustomScrollbar({axis:"x"});
-                            });
-                        </script>
                     </div>
                 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                <td>
+              <td>
             <div id = "button2" >
                 <h2> Preis </h2>
             </div>
