--- a/app/less/produktAnsicht.less
+++ b/app/less/produktAnsicht.less
@@ -3,7 +3,7 @@
 
 #button1
 {
-  margin-left: 0px;
+  margin-left: 0;
 }
 #Groesse
 {
@@ -85,7 +85,7 @@
 }
 #carousel-custom .carousel-indicators {
   margin: 10px 0 0;
-  overflow: auto;
+
   position: static;
   text-align: left;
   white-space: nowrap;
@@ -117,3 +117,20 @@
 .carousel-indicators li img {
   height: 66px;
   width: 52px;}
+
+
+
+
+
+
+
+
+
+.item:hover{
+
+
+  transform:scale(1.5);
+  transition: 0.8s linear;
+
+
+}
