--- a/app/tpl/partials/impressumMain.hbs
+++ b/app/tpl/partials/impressumMain.hbs
@@ -26,7 +26,12 @@
 
 </div>
 
-<!--Contact form-->
+<div id="main">
+    <div id="form_sample"></div> <!-- Include JS file here -->
+    <script src="impressum.js"></script>
+</div>
+
+<!--Contact form
 <div id="contactForm">
     <h4 id="contactTitle">Contact Us</h4>
     <div class="form-group">
@@ -47,4 +52,4 @@
     </div>
 
     <div id="send" class="btn btn-primary" onsend="validateForm()">Send</div>
-</div>
+</div>-->
