--- a/app/less/style.less
+++ b/app/less/style.less
@@ -4,7 +4,7 @@
 @import "artistAnsicht";
 @import "artistListAnsicht";
 @import "impressum";
-@import "vergrossernListenAnsicht";
+@import "lightbox";
 
 /* Space out content a bit */
 body {
