Vergrößern IMG Lupe

--- a/app/less/webShop.less
+++ b/app/less/webShop.less
@@ -43,3 +43,10 @@
   position: relative;
   top: -10px;
 }
+.Lupe img {
+  position: relative;
+  left: 0;
+  width: 30px;
+  height: 30px;
+  z-index: 2;
+}
