--- a/app/tpl/partials/footer.hbs
+++ b/app/tpl/partials/footer.hbs
@@ -19,6 +19,8 @@
 <script src="js/artistListAnsicht.js"></script> 
 <script src="js/lightbox-plus-jquery.js"></script> 
 <script src="js/impressum.js"></script> 
+<script type="text/javascript" src="../../js/jquery.elevatezoom.js"></script>
+
 
 <!-- endbuild -->
  
