--- a/app/tpl/partials/webShopmain.hbs
+++ b/app/tpl/partials/webShopmain.hbs
@@ -24,8 +24,11 @@
                         </div>
                     </div>
                 </a>
+                <!-- vergrößern img Ligthbox-->
+                <a class="Lupe" href="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/work%20in%20Progress.png?BCB"data-lightbox="Shop:Shirt"><img src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/enlarge%20Lupe.png?BCB"/></a>
                 <!-- Bsp wie Artistlink einzubinden-->
                 <a href="/artistAnsicht.html"> Link to Artist</a>
+
             </div>
         </div>
         <div id="-4">
@@ -38,6 +41,7 @@
                         </div>
                     </div>
                 </a>
+                <a class="Lupe" href="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" data-lightbox="Shop:Jacken"><img src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/enlarge%20Lupe.png?BCB"/></a>
                 <a href="/artistAnsicht.html"> Link to Artist</a>
             </div>
         </div>
@@ -51,6 +55,7 @@
                         </div>
                     </div>
                 </a>
+                <a class="Lupe" href="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" data-lightbox="Shop:Jacken"><img src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/enlarge%20Lupe.png?BCB"/></a>
                 <a href="/artistAnsicht.html"> Link to Artist</a>
             </div>
         </div>
@@ -64,6 +69,7 @@
                         </div>
                     </div>
                 </a>
+                <a class="Lupe" href="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" data-lightbox="Shop:Pullover"><img src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/enlarge%20Lupe.png?BCB"/></a>
                 <a href="/artistAnsicht.html"> Link to Artist</a>
             </div>
         </div>
@@ -77,6 +83,7 @@
                         </div>
                     </div>
                 </a>
+                <a class="Lupe" href="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" data-lightbox="Shop:Shirt"><img src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/enlarge%20Lupe.png?BCB"/></a>
                 <a href="/artistAnsicht.html"> Link to Artist</a>
             </div>
         </div>
@@ -90,6 +97,7 @@
                         </div>
                     </div>
                 </a>
+                <a class="Lupe" href="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" data-lightbox="Shop:Pullover"><img src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/enlarge%20Lupe.png?BCB"/></a>
                 <a href="/artistAnsicht.html"> Link to Artist</a>
             </div>
         </div>
@@ -103,6 +111,7 @@
                         </div>
                     </div>
                 </a>
+                <a class="Lupe" href="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" data-lightbox="Shop:Jacken"><img src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/enlarge%20Lupe.png?BCB"/></a>
                 <a href="/artistAnsicht.html"> Link to Artist</a>
             </div>
         </div>
@@ -116,6 +125,7 @@
                         </div>
                     </div>
                 </a>
+                <a class="Lupe" href="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" data-lightbox="Shop:Tops"><img src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/enlarge%20Lupe.png?BCB"/></a>
                 <a href="/artistAnsicht.html"> Link to Artist</a>
             </div>
         </div>
@@ -129,6 +139,7 @@
                         </div>
                     </div>
                 </a>
+                <a class="Lupe" href="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" data-lightbox="Shop:Tops"><img src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/enlarge%20Lupe.png?BCB"/></a>
                 <a href="/artistAnsicht.html"> Link to Artist</a>
             </div>
         </div>
