--- a/app/tpl/partials/artistListAnsichtmain.hbs
+++ b/app/tpl/partials/artistListAnsichtmain.hbs
@@ -32,6 +32,7 @@
                 </div>
             </div>
         </a>
+        <a class="Lupe" href="http://digitalmofo.com/wp-content/plugins/rss-poster/cache/7947b_logo-example.jpg" data-lightbox="ArtistLOGO"><img src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/enlarge%20Lupe.png?BCB"/></a>
     </div>
     <div id="-2"class="aArtist col-md-12">
         <a class="thumbnail" href="/artistAnsicht.html">
@@ -44,6 +45,7 @@
                 </div>
             </div>
         </a>
+        <a class="Lupe" href="http://digitalmofo.com/wp-content/plugins/rss-poster/cache/7947b_logo-example.jpg" data-lightbox="ArtistLOGO"><img src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/enlarge%20Lupe.png?BCB"/></a>
     </div>
     <div id="-4" class="aArtist col-md-12">
         <a class="thumbnail" href="/artistAnsicht.html">
@@ -56,6 +58,7 @@
                 </div>
             </div>
         </a>
+        <a class="Lupe" href="http://digitalmofo.com/wp-content/plugins/rss-poster/cache/7947b_logo-example.jpg" data-lightbox="ArtistLOGO"><img src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/enlarge%20Lupe.png?BCB"/></a>
     </div>
     <div id="-3" class="aArtist col-md-12">
         <a class="thumbnail" href="/artistAnsicht.html">
@@ -68,6 +71,7 @@
                 </div>
             </div>
         </a>
+        <a class="Lupe" href="http://digitalmofo.com/wp-content/plugins/rss-poster/cache/7947b_logo-example.jpg" data-lightbox="ArtistLOGO"><img src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/enlarge%20Lupe.png?BCB"/></a>
     </div>
     <div id="-5" class="aArtist col-md-12">
         <a class="thumbnail" href="/artistAnsicht.html">
@@ -80,6 +84,7 @@
                 </div>
             </div>
         </a>
+        <a class="Lupe" href="http://digitalmofo.com/wp-content/plugins/rss-poster/cache/7947b_logo-example.jpg" data-lightbox="ArtistLOGO"><img src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/enlarge%20Lupe.png?BCB"/></a>
     </div>
     <div id="-3"class="aArtist col-md-12">
         <a class="thumbnail" href="/artistAnsicht.html">
@@ -92,6 +97,7 @@
                 </div>
             </div>
         </a>
+        <a class="Lupe" href="http://digitalmofo.com/wp-content/plugins/rss-poster/cache/7947b_logo-example.jpg" data-lightbox="ArtistLOGO"><img src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/enlarge%20Lupe.png?BCB"/></a>
     </div>
     <div id="-2"class="aArtist col-md-12">
         <a class="thumbnail" href="/artistAnsicht.html">
@@ -104,6 +110,7 @@
                 </div>
             </div>
         </a>
+        <a class="Lupe" href="http://digitalmofo.com/wp-content/plugins/rss-poster/cache/7947b_logo-example.jpg" data-lightbox="ArtistLOGO"><img src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/enlarge%20Lupe.png?BCB"/></a>
     </div>
     <div id="-1"class="aArtist col-md-12">
         <a class="thumbnail" href="/artistAnsicht.html">
@@ -116,6 +123,7 @@
                 </div>
             </div>
         </a>
+        <a class="Lupe" href="http://digitalmofo.com/wp-content/plugins/rss-poster/cache/7947b_logo-example.jpg" data-lightbox="ArtistLOGO"><img src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/enlarge%20Lupe.png?BCB"/></a>
     </div>
     <div id="-4" class="aArtist col-md-12">
         <a class="thumbnail" href="/artistAnsicht.html">
@@ -128,6 +136,7 @@
                 </div>
             </div>
         </a>
+        <a class="Lupe" href="http://digitalmofo.com/wp-content/plugins/rss-poster/cache/7947b_logo-example.jpg" data-lightbox="ArtistLOGO"><img src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/enlarge%20Lupe.png?BCB"/></a>
     </div>
 </div>
 </div>
