--- a/app/tpl/partials/webShopmain.hbs
+++ b/app/tpl/partials/webShopmain.hbs
@@ -34,14 +34,14 @@
         <div id="-4">
             <div class="aProdukt col-md-12">
                 <a class="thumbnail" href="/produktAnsicht.html">
-                    <img  src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" >
+                    <img  src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/work%20in%20Progress.png?BCB" >
                     <div class="wrapper">
                         <div class="caption produktShopName">
                             <span>Jacke 1 Preis</span>
                         </div>
                     </div>
                 </a>
-                <a class="Lupe" href="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" data-lightbox="Shop:Jacken"><img src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/enlarge%20Lupe.png?BCB"/></a>
+                <a class="Lupe" href="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/work%20in%20Progress.png?BCB"  data-lightbox="Shop:Jacken"><img src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/enlarge%20Lupe.png?BCB"/></a>
                 <a href="/artistAnsicht.html"> Link to Artist</a>
             </div>
         </div>
