Änderung  Funktionen  Vereinfachungen

--- a/app/tpl/partials/artistListAnsichtmain.hbs
+++ b/app/tpl/partials/artistListAnsichtmain.hbs
@@ -8,11 +8,11 @@
             <p id = "Collectionwählen"><strong>Sort by Collection</strong></p>
             <select name="collection">
                 <option value="Wählen"><strong>Wählen</strong></option>
-                <option value="A" onclick="sorthideCA();">Collection A</option>
-                <option value="B" onclick="sorthideCB();">Collection B</option>
-                <option value="C" onclick="sorthideCC();">Collection C</option>
-                <option value="D" onclick="sorthideCD();">Collection D</option>
-                <option value="E" onclick="sorthideCE();">Collection E</option>
+                <option value="A" onclick="sortdivCA();">Collection A</option>
+                <option value="B" onclick="sortdivCB();">Collection B</option>
+                <option value="C" onclick="sortdivCC();">Collection C</option>
+                <option value="D" onclick="sortdivCD();">Collection D</option>
+                <option value="E" onclick="sortdivCE();">Collection E</option>
             </select>
 
         </ol>
